--- a/supereeg_tutorials/3_nifti_objects.ipynb
+++ b/supereeg_tutorials/3_nifti_objects.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "81fe32c0-511b-4bda-b3c3-ff967dd650af",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7a3a757b-00de-4a94-b7d2-ccdd3406a30d",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
       "\u001b[0;31mHeaderDataError\u001b[0m: data code 26996 not recognized",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mHeaderDataError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nii \u001b[38;5;241m=\u001b[39m \u001b[43mse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexample_nifti\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m nii \u001b[38;5;241m=\u001b[39m \u001b[43mse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexample_nifti\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/load.py:108\u001b[0m, in \u001b[0;36mload\u001b[0;34m(fname, vox_size, return_type, sample_inds, loc_inds, field)\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing both field and slicing currently not supported.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    107\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m fname \u001b[38;5;129;01min\u001b[39;00m datadict\u001b[38;5;241m.\u001b[39mkeys():\n\u001b[0;32m--> 108\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43m_load_example\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdatadict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_inds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloc_inds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfield\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    109\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    110\u001b[0m     data \u001b[38;5;241m=\u001b[39m _load_from_path(fname, sample_inds, loc_inds, field)\n",
       "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/load.py:165\u001b[0m, in \u001b[0;36m_load_example\u001b[0;34m(fname, fileid, sample_inds, loc_inds, field)\u001b[0m\n\u001b[1;32m    163\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    164\u001b[0m     _download(fname, _load_stream(fileid[\u001b[38;5;241m0\u001b[39m]), fileid[\u001b[38;5;241m1\u001b[39m])\n\u001b[0;32m--> 165\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43m_load_from_cache\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfileid\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msample_inds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloc_inds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfield\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    166\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    167\u001b[0m     \u001b[38;5;28mprint\u001b[39m(e)\n",
       "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/load.py:247\u001b[0m, in \u001b[0;36m_load_from_cache\u001b[0;34m(fname, ftype, sample_inds, loc_inds, field)\u001b[0m\n\u001b[1;32m    245\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m Model(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mdd\u001b[38;5;241m.\u001b[39mio\u001b[38;5;241m.\u001b[39mload(fullpath))\n\u001b[1;32m    246\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m ftype \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnii\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m--> 247\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mNifti\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfullpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    248\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m ftype \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocs\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    249\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Location(fullpath)\n",
@@ -115,10 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "678563ab-4433-4664-8fef-dc91f9aa7d9d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 91 109  91]\n"
+     ]
+    },
     {
      "ename": "MemoryError",
      "evalue": "Unable to allocate 33.6 GiB for an array with shape (91, 109, 91, 5000) and data type float64",
@@ -126,10 +133,10 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bo_nii \u001b[38;5;241m=\u001b[39m \u001b[43mse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNifti\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexample_data\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bo_nii \u001b[38;5;241m=\u001b[39m \u001b[43mse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mNifti\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mexample_data\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/nifti.py:66\u001b[0m, in \u001b[0;36mNifti.__init__\u001b[0;34m(self, data, affine, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[38;5;28msuper\u001b[39m(Nifti, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(data\u001b[38;5;241m.\u001b[39mdataobj, data\u001b[38;5;241m.\u001b[39maffine)\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, Brain):\n\u001b[0;32m---> 66\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_nii\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28msuper\u001b[39m(Nifti, \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(data\u001b[38;5;241m.\u001b[39mdataobj, data\u001b[38;5;241m.\u001b[39maffine)\n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, Model):\n",
       "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/brain.py:609\u001b[0m, in \u001b[0;36mBrain.to_nii\u001b[0;34m(self, filepath, template, vox_size, sample_rate)\u001b[0m\n\u001b[1;32m    605\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray_equiv(temp_v_size, v_size):\n\u001b[1;32m    606\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVoxel sizes of reconstruction and template do not match. \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m    607\u001b[0m                   \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mVoxel sizes calculated from model locations.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m--> 609\u001b[0m nifti \u001b[38;5;241m=\u001b[39m \u001b[43m_brain_to_nifti\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    611\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m filepath:\n\u001b[1;32m    612\u001b[0m     nifti\u001b[38;5;241m.\u001b[39mto_filename(filepath)\n",
-      "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/helpers.py:1621\u001b[0m, in \u001b[0;36m_brain_to_nifti\u001b[0;34m(bo, nii_template, antialiasing)\u001b[0m\n\u001b[1;32m   1618\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1619\u001b[0m     shape \u001b[38;5;241m=\u001b[39m bo\u001b[38;5;241m.\u001b[39mnifti_shape\n\u001b[0;32m-> 1621\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mY\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1622\u001b[0m counts \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(data\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m   1624\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m antialiasing \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n",
+      "File \u001b[0;32m~/Documents/supereeg/supereeg/supereeg/helpers.py:1621\u001b[0m, in \u001b[0;36m_brain_to_nifti\u001b[0;34m(bo, nii_template, antialiasing)\u001b[0m\n\u001b[1;32m   1619\u001b[0m     shape \u001b[38;5;241m=\u001b[39m bo\u001b[38;5;241m.\u001b[39mnifti_shape\n\u001b[1;32m   1620\u001b[0m \u001b[38;5;28mprint\u001b[39m(shape)\n\u001b[0;32m-> 1621\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mY\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1622\u001b[0m counts \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(data\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m   1624\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m antialiasing \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n",
       "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate 33.6 GiB for an array with shape (91, 109, 91, 5000) and data type float64"
      ]
     }
