finished running the last cell

--- a/miller_data/supereeg_miller_data.ipynb
+++ b/miller_data/supereeg_miller_data.ipynb
@@ -322,10 +322,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "13f051be-15ab-4fb6-a999-b2b29af4a39e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of locations: 1128\n",
+      "Number of subjects: 20\n",
+      "RBF width: 20\n",
+      "Date created: Thu Jan 16 17:35:58 2025\n",
+      "Meta data: {'stable': True}\n"
+     ]
+    }
+   ],
    "source": [
     "# make a model\n",
     "n_subs = len(ids)\n",
