finished basics for three model notebook. needs a way to save models and metrics or graphing or something

--- a/miller_data/three_models.ipynb
+++ b/miller_data/three_models.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "cab5e86e-9b8e-4e99-a14b-ce71fb80bb46",
    "metadata": {},
    "outputs": [],
@@ -126,50 +126,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3c2fd08f-e29b-4905-a974-1964838b2de3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of locations: 280\n",
+      "Number of subjects: 7\n",
+      "RBF width: 20\n",
+      "Date created: Tue Jan 21 11:41:43 2025\n",
+      "Meta data: {'stable': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mo_basic7.info()"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fdd0c527-2736-411b-b063-f6a92231eb9e",
    "metadata": {},
    "source": [
-    "### Make a model using basic fourteen"
+    "### Make a model using basic fourteen\n",
+    "not using subject 'jm' because it's missing locs for some reason. That's the one that has the most zeroes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "fa303ce0-2ea4-4ae8-88ac-ecef3ac27ebd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "slice(None, 12, None)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m basic14_bos \u001b[38;5;241m=\u001b[39m \u001b[43mfh_bos\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m12\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m+\u001b[39m[fh_bos[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m      2\u001b[0m mo_basic14 \u001b[38;5;241m=\u001b[39m se\u001b[38;5;241m.\u001b[39mModel(data \u001b[38;5;241m=\u001b[39m basic14_bos, n_subs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(basic14_bos))\n",
-      "\u001b[0;31mKeyError\u001b[0m: slice(None, 12, None)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "basic14_bos = fh_bos[:12]+[fh_bos[-1]]\n",
+    "basic14_bos = [fh_bos[x] for x in fh_ids if x != 'jm']\n",
     "mo_basic14 = se.Model(data = basic14_bos, n_subs = len(basic14_bos))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "57e8d251-25fe-4b71-a2c5-1f073b7b2429",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of locations: 541\n",
+      "Number of subjects: 13\n",
+      "RBF width: 20\n",
+      "Date created: Tue Jan 21 12:10:08 2025\n",
+      "Meta data: {'stable': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mo_basic14.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -192,8 +209,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "74bb1cc0-0d73-4f9c-9aaf-be36654fb0c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of locations: 281\n",
+      "Number of subjects: 14\n",
+      "RBF width: 20\n",
+      "Date created: Tue Jan 21 11:55:35 2025\n",
+      "Meta data: {'stable': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mo_noisy14.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e18084c6-2293-4c0b-9e64-640a39f89067",
    "metadata": {},
    "outputs": [],
    "source": []
