added loading for previously generated models

--- a/miller_data/three_models.ipynb
+++ b/miller_data/three_models.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "id": "3c2fd08f-e29b-4905-a974-1964838b2de3",
    "metadata": {},
    "outputs": [
@@ -143,6 +143,7 @@
     }
    ],
    "source": [
+    "mo_basic7 = se.load('basic7.mo')\n",
     "mo_basic7.info()"
    ]
   },
@@ -152,7 +153,7 @@
    "metadata": {},
    "source": [
     "### Make a model using basic fourteen\n",
-    "not using subject 'jm' because it's missing locs for some reason. That's the one that has the most zeroes"
+    "not using subject 'jm' because it's missing locs for some reason. The locs file has a lot of zeroes"
    ]
   },
   {
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "57e8d251-25fe-4b71-a2c5-1f073b7b2429",
    "metadata": {},
    "outputs": [
@@ -185,6 +186,7 @@
     }
    ],
    "source": [
+    "mo_basic14 = se.load('basic14.mo')\n",
     "mo_basic14.info()"
    ]
   },
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "74bb1cc0-0d73-4f9c-9aaf-be36654fb0c1",
    "metadata": {},
    "outputs": [
@@ -226,6 +228,7 @@
     }
    ],
    "source": [
+    "mo_noisy14 = se.load('noisy14.mo')\n",
     "mo_noisy14.info()"
    ]
   },
