modified the notebook a little

--- a/miller_data/three_models.ipynb
+++ b/miller_data/three_models.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "cab5e86e-9b8e-4e99-a14b-ce71fb80bb46",
    "metadata": {},
    "outputs": [],
@@ -118,16 +118,101 @@
    "execution_count": 6,
    "id": "4eb7dba9-cb0f-4c0c-bc19-6c088306f8a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of locations: 280\n",
+      "Number of subjects: 7\n",
+      "RBF width: 20\n",
+      "Date created: Tue Jan 21 12:50:02 2025\n",
+      "Meta data: {'stable': True}\n"
+     ]
+    }
+   ],
    "source": [
     "basic7_bos = [fh_bos[x] for x in fn_ids]\n",
-    "mo_basic7 = se.Model(data = basic7_bos, n_subs = len(basic7_bos))"
+    "mo_basic7 = se.Model(data = basic7_bos, n_subs = len(basic7_bos))\n",
+    "mo_basic7.save('basic7.mo')\n",
+    "mo_basic7.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdd0c527-2736-411b-b063-f6a92231eb9e",
+   "metadata": {},
+   "source": [
+    "### Make a model using basic fourteen\n",
+    "not using subject 'jm' because it's missing locs for some reason. The locs file has a lot of zeroes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "3c2fd08f-e29b-4905-a974-1964838b2de3",
+   "execution_count": 7,
+   "id": "fa303ce0-2ea4-4ae8-88ac-ecef3ac27ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of locations: 541\n",
+      "Number of subjects: 13\n",
+      "RBF width: 20\n",
+      "Date created: Tue Jan 21 12:50:26 2025\n",
+      "Meta data: {'stable': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "basic14_bos = [fh_bos[x] for x in fh_ids if x != 'jm']\n",
+    "mo_basic14 = se.Model(data = basic14_bos, n_subs = len(basic14_bos))\n",
+    "mo_basic14.save('basic14.mo')\n",
+    "mo_basic14.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7da7c460-3971-4ccc-bab3-c4882bcfd293",
+   "metadata": {},
+   "source": [
+    "### Make a model using basic and noisy seven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8800fdb-5f49-48b2-8411-a2f259453b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy14_bos = basic7_bos + fn_bos\n",
+    "mo_noisy14 = se.Model(data = noisy14_bos, n_subs = len(noisy14_bos))\n",
+    "mo_noisy14.save('noisy14.mo')\n",
+    "mo_noisy14.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21090091-7a50-4c52-b2ab-6a49d759fbd3",
+   "metadata": {},
+   "source": [
+    "# Load the models and do something with them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbe1e7d2-1a37-496e-964f-d4a265d114df",
+   "metadata": {},
+   "source": [
+    "### Loading in the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "115f735e-f4b6-41ab-b8f2-f35e19aaae34",
    "metadata": {},
    "outputs": [
     {
@@ -145,26 +230,6 @@
    "source": [
     "mo_basic7 = se.load('basic7.mo')\n",
     "mo_basic7.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdd0c527-2736-411b-b063-f6a92231eb9e",
-   "metadata": {},
-   "source": [
-    "### Make a model using basic fourteen\n",
-    "not using subject 'jm' because it's missing locs for some reason. The locs file has a lot of zeroes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "fa303ce0-2ea4-4ae8-88ac-ecef3ac27ebd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "basic14_bos = [fh_bos[x] for x in fh_ids if x != 'jm']\n",
-    "mo_basic14 = se.Model(data = basic14_bos, n_subs = len(basic14_bos))"
    ]
   },
   {
@@ -188,25 +253,6 @@
    "source": [
     "mo_basic14 = se.load('basic14.mo')\n",
     "mo_basic14.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7da7c460-3971-4ccc-bab3-c4882bcfd293",
-   "metadata": {},
-   "source": [
-    "### Make a model using basic and noisy seven"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b8800fdb-5f49-48b2-8411-a2f259453b0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noisy14_bos = basic7_bos + fn_bos\n",
-    "mo_noisy14 = se.Model(data = noisy14_bos, n_subs = len(noisy14_bos))"
    ]
   },
   {
@@ -235,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e18084c6-2293-4c0b-9e64-640a39f89067",
+   "id": "f0e12788-442e-4825-bb81-e3b142c3abc7",
    "metadata": {},
    "outputs": [],
    "source": []
