updated example. making it into one notebook eventually

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -5,14 +5,14 @@
    "id": "80c0c0d0-c6e4-4a3d-b261-642e63ae5bc3",
    "metadata": {},
    "source": [
-    "# Example\n",
+    "# Four Models Example\n",
     "\n",
     "Excerpts from supereeg tutorial using Kai Miller's data faces_basic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8bfb3226-b363-4be0-a65f-93ed1a150ea0",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1bf123f1-dc24-4846-a4f6-da11794821d8",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ffa56d2d-e4d7-4ac4-bb85-7310ab6813ee",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "'jt'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bb4c1684-17fe-4e9a-8969-2cbb0eb3cb66",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "dict"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6594aa13-849e-4599-81c7-4ac56a8cfe9a",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2a9e78a8-48fb-4e95-99ea-e49c23726563",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "dict_keys(['__header__', '__version__', '__globals__', 'data', 'stim', 'srate', 'locs'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "67a7e4f7-bafe-469a-9fef-842e946d8a3a",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "18b05008-140b-4197-a6f4-fcc5eb01a5f3",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
       "Recording time in seconds: [[271.4]]\n",
       "Sample Rate in Hz: [array([1000], dtype=uint16)]\n",
       "Number of sessions: 1\n",
-      "Date created: Fri Jan 24 14:23:40 2025\n",
+      "Date created: Mon Jan 27 12:22:07 2025\n",
       "Meta data: {}\n"
      ]
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0734aee5-68c2-4369-aa1e-3903fd040a8d",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2665a6c3-8727-4d83-b659-1ae1d46f21fa",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
    "id": "e7f30f20-ac72-45c1-86fa-a1da8aeb4d74",
    "metadata": {},
    "source": [
-    "# Model objects and predicting whole brain activity\n",
+    "## Model objects and predicting whole brain activity\n",
     "\n",
     "Model objects are supereeg’s class that contains the correlation model that we use to reconstruct full-brain activity from recordings at an impoverished set of locations. The supereeg package offers a several pre-compiled models that you can use to reconstruct brain activity. We also provide several ways of creating or specifying your own model.\n",
     "\n",
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e52ac7f9-ba7c-4de3-9455-376204c0b4ee",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "63cd466e-aee2-4a0e-8f9e-d92651915127",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
       "Number of locations: 194\n",
       "Number of subjects: 3\n",
       "RBF width: 20\n",
-      "Date created: Fri Jan 24 14:23:53 2025\n",
+      "Date created: Mon Jan 27 12:22:15 2025\n",
       "Meta data: {'stable': True}\n"
      ]
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "a6d509b1-893f-411c-9220-6b7e0f5553a4",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7b9e0b3d-358c-45cb-b2d2-17e765a46707",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "cb5dbe02-e4a8-4160-b3be-3b2018908304",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "b520ed32-6b80-42ca-99b1-90dd324ca660",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
       "Number of locations: 290\n",
       "Number of subjects: 6\n",
       "RBF width: 20\n",
-      "Date created: Fri Jan 24 14:23:53 2025\n",
+      "Date created: Mon Jan 27 12:22:15 2025\n",
       "Meta data: {'stable': True}\n"
      ]
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "3e955db6-06ce-42c7-9eda-c4d3652a4895",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "e0029f76-510e-4c11-80a7-8072ddc4e0b5",
    "metadata": {},
    "outputs": [
@@ -501,9 +501,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "938a72ba-fcb4-4eb8-bcf2-2cec26e87fae",
+   "metadata": {},
+   "source": [
+    "## Comparing different models\n",
+    "\n",
+    "Now let's make some models using different subsets of the same data and compare them. We'll continue using the faces_houses data (with the exception of patient 'jm' for technical reasons) but we'll also add in the faces_noisy data. This dataset includes the same faces_houses data of seven patients as well as responses from the same task with a noisy stimulus. \n",
+    "\n",
+    "We'll make four different models using particular sets of observations:\n",
+    "\n",
+    "- The basic task data from the seven patients who performed both tasks\n",
+    "- The basic and noisy task data from the seven patients\n",
+    "- The basic task data from all thirteen patients\n",
+    "- All  the data\n",
+    "\n",
+    "First, let's arrange our brain objects. We already have the data from the thirteen patients who completed the basic task:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "328a5582-7184-41f1-951d-434b53101816",
+   "id": "a50559cf-4ea6-422b-be00-94fbe41f01bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basic13_bos = bos[:12] + bos[13:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d598ded5-b022-4430-a800-7fdb623701e0",
+   "metadata": {},
+   "source": [
+    "## Where to go from here\n",
+    "\n",
+    "- make a script for leave-one-out analysis\n",
+    "- make various subsets of the patients/electrodes and analyze what is most informative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc741687-4b99-4750-8a17-583b12b0e32b",
    "metadata": {},
    "outputs": [],
    "source": []
