updated notebook. Adding in four models content

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -521,13 +521,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a50559cf-4ea6-422b-be00-94fbe41f01bc",
    "metadata": {},
    "outputs": [],
    "source": [
     "basic13_bos = bos[:12] + bos[13:]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d770cf60-d5e1-471c-8091-e19642a12460",
+   "metadata": {},
+   "source": [
+    "But before we can separate out the data from the seven patients who completed the basic task, we have to find out which seven patients those are. So let's load in the data for the noisy task like we did above: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ccc49f5a-e6bc-4f2c-8f4a-41a17b387307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy_data_dir = '../miller_data/faces_noise/data/'\n",
+    "noisy_data_name = 'fhnoisy.mat'\n",
+    "noisy_locs_dir = '../miller_data/faces_noise/locs/'\n",
+    "noisy_locs_name = 'xslocs.mat'\n",
+    "\n",
+    "noisy_ids = [x[:2] for x in os.listdir(noisy_data_dir) if x[0] != '.']\n",
+    "\n",
+    "noisy_data = {f'{x}':loadmat(f\"{noisy_data_dir}{x}/{x}_{noisy_data_name}\") for x in noisy_ids}\n",
+    "\n",
+    "for x in noisy_ids:\n",
+    "    noisy_data[x]['locs'] = loadmat(f\"{noisy_locs_dir}{x}_{noisy_locs_name}\")['locs']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d802ee2f-2cc4-47ba-8c5a-ebb4143bf68c",
+   "metadata": {},
+   "source": [
+    "Now we can sort out the basic task data of the seven patients who did both:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "b6b16935-4c5b-4260-af8b-0c7b0903e559",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "basic7_bos = [x for i,x in enumerate(bos) \n",
+    "              if i in np.argwhere(np.isin(ids,noisy_ids))]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0ab0bee-8314-4353-9460-8cd900bb752b",
+   "metadata": {},
+   "source": [
+    "And we can make a list of brain objects from the noisy task data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "ddcad882-b46e-4750-9936-041a70bcb3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noisy7_bos = [se.Brain(data = noisy_data[x]['data'], locs = noisy_data[x]['locs'], \n",
+    "                sample_rate = noisy_data[x]['srate']) for x in noisy_ids]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffe77bef-9f47-4523-8b69-bd020b4b3213",
+   "metadata": {},
+   "source": [
+    "Now we're prepared to make some models in the same way as demonstrated above. This can take some time, so for convenience we can also load in the previously-saved models. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f342bd5d-f8f6-4c75-bdd9-6d7a3edd8c23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0a304d0f-8c22-43e1-afb9-549809d9392d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mo_basic7 = se.load('basic7.mo')\n",
+    "mo_noisy13 = se.load('noisy13.mo')\n",
+    "mo_basic13 = se.load('basic13.mo')\n",
+    "mo_all20 = se.load('all20.mo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27bedbe2-4283-456f-88a2-37088df50458",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9848f6fa-6efb-4701-94a8-8e59c52d37b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
