added the part where the models are made

--- a/examples/basic_example.ipynb
+++ b/examples/basic_example.ipynb
@@ -609,7 +609,11 @@
    "id": "f342bd5d-f8f6-4c75-bdd9-6d7a3edd8c23",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mo_basic7 = se.Model(data = basic7_bos, n_subs = len(basic7_bos))\n",
+    "mo_basic13 = se.Model(data = basic13_bos, n_subs = len(basic14_bos))\n",
+    "mo_noisy14 = mo_basic7"
+   ]
   },
   {
    "cell_type": "code",
